<resources>
    <string name="app_name">Test</string>
    <string name="write_surname">Surname</string>
    <string name="name">Name</string>
    <string name="name2">Middle Name</string>
    <string name="date">Birthday</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="Please_add_employee">Please, add Employee</string>
    <string-array name="city">
        <item>Kyiv</item>
        <item>Odessa</item>
        <item>Lviv</item>
        <item>Kharkov</item>
    </string-array>
    <string-array name="position">
        <item>Doctor</item>
        <item>Driver</item>
        <item>Nurse</item>
        <item>Boss</item>
    </string-array>
</resources>
